Fix weapon art spilling over frame in hand
Fixes: #140

--- a/app/scripts/src/less/ui/replay/rendered-card.less
+++ b/app/scripts/src/less/ui/replay/rendered-card.less
@@ -42,10 +42,6 @@
 	    top: 10%;
 	}
 
-	&.weapon .art {
-    	clip-path: ellipse(45% 45% at 50% 50%);
-	}
-
 	&.hero-card .art {
 		clip-path: polygon(0% 100%, 0% 56%, 15% 19%, 50% 0%, 85% 19%, 100% 56%, 100% 100%);
 	}
